crates/core/tests/ui/unknown_container_attribute.stderr
error: expected identifier, found keyword `true`
 --> tests/ui/uknown_container_attribute.rs:2:8
  |
2 | #[mock(true)]
  |        ^^^^
